objects/CCMS_Family__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMS_DB_Id__c</fullName>
        <externalId>true</externalId>
        <label>CCMS DB Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CCMS_Family__c</fullName>
        <externalId>true</externalId>
        <label>CCMS Family</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CCMS Family</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CCMS Family Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCMS Families</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>